--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
+  url_launcher: ^6.2.4
+  flutter_local_notifications: ^16.3.2
 
 dev_dependencies:
   flutter_test:
