--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.1
   url_launcher: ^6.2.4
   flutter_local_notifications: ^16.3.2
+  sensors_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
